terraform1.tf
resource "aws_instance" "iac_in_action" {
  ami               = var.ami_id
  instance_type     = var.instance_type
  availability_zone = var.availability_zone
 
  // dynamically retrieve SSH Key Name
  key_name = aws_key_pair.iac_in_action.key_name
 
  // dynamically set Security Group ID (firewall)
  vpc_security_group_ids = [aws_security_group.iac_in_action.id]
 
  tags = {
    Name = "Terraform-managed EC2 Instance for IaC in Action"
  }
}
